# 1_course_2017_project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake  main.c  main.cpp
include/: data_loader.h  macros.h  player_func.h  render.h
include/collections/: game.h  player.h  sector.h  vector.h
src/: data_loader.c  main.cpp  player_func.c  render.c
src/include/: macros.h  render.h
tests/: main.c
